@@ -30,22 +30,8 @@
 }
 
 .hallotoolbar button {
-    // Some of this is copied from the jQuery UI style, forcing those styles to apply to 
-    // this selector. Without it, if your cursor is placed above a button while it's 
-    // appearing, the CSS from jQuery UI won't immediately be applied.
     border-radius: 0;
     height: 2.4em;
-    border: 1px solid $color-grey-3;
-    background: $color-white;
-    font-weight: normal;
-    color: $color-grey-1-1;
-
-    &:hover {
-        border: 1px solid $color-teal;
-        background: $color-teal;
-        font-weight: normal;
-        color: $color-white;
-    }
 }
 
 .richtext {
